--- a/server/index.html
+++ b/server/index.html
@@ -6,5 +6,10 @@
     <h1>hello</h1>
 
 
+
+    <script src="./socket.io/socket.io.js"></script>
+    <script>
+        let socket = io();
+    </script>
 </body>
 </html>
